# sylva-elements_diskimage-builder

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  MANIFEST.in  README.md  build-config.yaml  build-requirements.txt  build.sh  deploy-image.sh  dib-test-build.env  pyproject.toml  renovate.json  settings.tmpl  setup.cfg  tox.ini
.gitlab/ci/: pipeline-build-and-test-suse.yml  pipeline-build-and-test.yml  templates-build-tests.yml
demo/: MANIFEST.in  setup.cfg
demo/kanod_demo/: config.yaml
doc/: Makefile
doc/source/: conf.py  index.rst
doc/source/core/: index.rst
doc/source/image-builder/: config.rst  development.rst  index.rst  installation.rst  overview.rst
kanod_image_builder/: config.yaml  main.py  schema_config.yaml
kanod_image_builder/elements/block-device-ck8s-lvm/: block-device-default.yaml
kanod_image_builder/elements/block-device-kanod-lvm/: block-device-default.yaml
kanod_image_builder/elements/block-device-rke2-lvm/: block-device-default.yaml
kanod_image_builder/elements/chrony/: README.md  package-installs.yaml  schema.yaml
kanod_image_builder/elements/cis-remediation/: package-installs.yaml
kanod_image_builder/elements/cis-remediation-openscap/: README
kanod_image_builder/elements/cloud-init-growpart/: element-deps  package-installs.yaml  pkg-map
kanod_image_builder/elements/containers/: schema.yaml
kanod_image_builder/elements/dm-crypt/: add-dm-crypt
kanod_image_builder/elements/grub-init/: element-deps  schema.yaml
kanod_image_builder/elements/grub-password/: element-deps
kanod_image_builder/elements/kanod-admin/: schema.yaml
kanod_image_builder/elements/kanod-cloud-init/: README.md  package-installs.yaml  source-repository-cloudinit
kanod_image_builder/elements/kanod-configure/static/opt/kanod-configure/: .stestr.conf  MANIFEST.in  setup.cfg  test-requirements.txt  tox.ini
kanod_image_builder/elements/kanod-configure/static/opt/kanod-configure/kanod_configure/: boot_configure.py  common.py  configure.py  util_opensuse.py
kanod_image_builder/elements/kanod-configure/static/opt/kanod-configure/kanod_configure/templates/: authorized_keys.tmpl  environment.tmpl
kanod_image_builder/elements/klvm/: element-deps  (+1 more)
security/: cosign.md  cosign.pub
sylva/: .gitlab-ci.yml
sylva/sylva_imagebuilder/: config.yaml
sylva_imagebuilder/: config.yaml  main.py
tests/ci/: validate-img.sh
(+134 files in other folders)
