[metadata]
name = sylva-imagebuilder
author = Sylva Team
version = 0.1.0

[options]
python_requires = >=3.8
packages = sylva_imagebuilder
include_package_data = True
install_requires =
  kanod-image-builder >= 0.2.0
[options.entry_points]
console-scripts =
  build-image = kanod_image_builder.main:main

