[metadata]
name = kanod-configure
author = Kanod Team
version = 0.2.0

[options]
python_requires = >=3.8
packages = kanod_configure
include_package_data = True
install_requires =

[options.entry_points]
console-scripts =
  kanod-runcmd = kanod_configure.configure:main
  kanod-bootcmd = kanod_configure.boot_configure:main
